VolunteerBoard/style.css
/*will remove later, this is to help me visualize where each element is*/

/*
*{
    border: 1px solid red;
}


*/




:root{
    /*variables to make things easier*/
    --navheight: 10vh;
}

/*removing default padding and margin to make things less confusing*/
body{
    
    padding: 0;
    margin: 0;

    background-color: #e9e9e9;

}



#header{
    /*
    for some unknown reason without this border there appears whitespace between nav and header?????
    I guess its fine because figma design has a border regardless but this is a mystery to me
    edit: this might be caused by "margin collapsing" but i still am not 100% sure
    
    */
    border: 1px solid black;

    overflow: hidden;
    
    margin-top: var(--navheight);
    height: calc(100vh - var(--navheight)); /*total height minus height of navbar, this way the image does not get blocked by the navbar*/
    padding: 0;
    
    background-color: aquamarine; /*I put this here as a tester to see if the background image is actually covering the entire div*/
    
    
    background-image: url('images/header_img.png');
    background-repeat:no-repeat;
    background-size: cover;
    background-position: center;

    transition: 0.1s;

    
  
}

#nav{
    height: var(--navheight);
    background-color: #2d3e4e;
    position: fixed;
    top: 0px;

    /*padding: 5vw 0px 5vw 0px;*/

    transition: 0.1s;
    overflow: hidden;
    z-index: 9999;/*guarantee that everything goes below the navbar*/
    
}

#logoImage{

    /*trick to vertically align image inside of div*/
    position: absolute;

    top:0;
    bottom: 0;
    margin: auto;

    margin-left: 5vw;

    height: calc(0.8*var(--navheight));

    transition: 0.1s;
    

    /*
    position: fixed;
    top: 17px;
    left: 50px;
    */
}

#header_words{
    position: relative;

    font-family: "Roboto";

    padding-top: 3vh;

    color: white;
    background-color: rgba(0, 0, 0, 0.7);

    /*alignment relative to header (i hope)*/
    top: 50%;
    text-align: center;
}


/*not using em for title because they are alot bigger than normal text, and shouldnt change size when user has larger font size selected*/
#small_header_words{

    font-size: calc(1.5vw + 20px);
}

#large_header_words{
    font-size: calc(7vw + 20px);
    text-shadow: 2px 5px 6px rgba(224, 158, 80, 0.6);
    font-weight: 700;
}



#opportunities{
    padding: 0;

    box-shadow: 0px 31px 15px -1px rgba(0, 0, 0, 0.2);

    
}

/*
@media (max-width: 575.98px) { 

    #opportunities{
        width: 80%;
    }
 }
*/

#opportunities_title{
    padding-top: 4vh;
    padding-bottom: 4vh;

    text-align: center;

    background-color: #2d3e4e;

    
}

#opportunities_title > h1{
    color: white;
    font-family: "Roboto";
    font-size: 2em;

}

#opportunities_description{
    text-align: center;
    justify-content: center;

    padding: 2vh 4vw 4vh 4vw;

    font-family: "Roboto";
    font-weight: 400;

    /*thick lines that appear on figma design*/
    border-bottom: 10px solid #b5b5b5;
    border-top: 10px solid #f5f5f5;
}


#post_event_btn{
    border-radius: 20px;
    background-color: #e09e50;
    border-width: 0;

    color: #2A403D;


    font-family: "Roboto";
    font-weight: 500;

    font-size: 1.25em;

    padding: 0.5em 1em 0.5em 1em;
}

#post_event_btn:hover{
    background-color: #F9BB72;
}


#column-headers{
    /* paddings to match the paddings of the accordian items*/


    /*"hack" solution, found by guess and check for now*/
    padding-left: 32px;
    padding-right: 52px;
}




#column-headers>.row>.col-3{

    display: flex;
    flex-direction: column-reverse;
    
    

    padding-top: 10px;
    padding-bottom: 10px;
   /* border: 1px solid red;*/
}

.col-header-text{
    /*border: 1px solid blue;*/

    font-family: "Roboto";
    font-size: 1em;
    font-weight: bold;
    

    text-align: center;

    margin: 0;
    
}


/*background colors for event listings, also this removes the default background color when the item is :focus*/
.accordion-item:nth-child(odd)>.accordion-header>.accordion-button{
    background-color: white;
}

.accordion-item:nth-child(even)>.accordion-header>.accordion-button{
    background-color: #e8eceb;
}

.accordion-body{
    background-color: #f5f5f5;
    overflow: auto; /*the "clearfix" hack that makes the collapsed body at least as big as the floated image inside*/
}

/*setting a color (for both background and text) overrides the blue glow?*/
.title, .company-name, .location, .posted-time{
    color: black;
}


.title{
    font-family: "Roboto";
    font-weight: 500;

    color: #659692/*override the other color because this is below in the css*/

    /*font size and overflow case comes later*/

}


.location, .posted-time{
    font-family: "Roboto";
    font-weight: 400;

    /*font size and overflow case comes later*/

    align-self: center;
    text-align: center;
}

.location>p{
    margin: 0;
}

@media (max-width: 575.98px) { 

    .location, .posted-time, .company-name{
        font-size: 0.75em;
    }

    .title{
        font-size: 1em;
    }
 }



.collapse-img{
    float: right;
    margin-left: 20px;
    margin-bottom: 20px;


    /*making sure that the image is croppied*/
    object-fit: cover;
    width: calc(10vw + 100px);
    height: calc(10vw + 100px);

    
}

.description-content{
    font-family: "Roboto";
    font-size: 1em;

    
}

.contact-content{
    padding: 0;
}

.contact-text>a{

    display: block;

    font-family: "Roboto";
    text-decoration: none;
    color: #659692 !important;/*overrides some default bootstrap color that I am unaware of*/

}

.contact-text{
    padding:0;/*flush with header words*/
}

.contact-text>a:hover{
    text-decoration: underline !important;
    cursor: pointer;
}

.contact-text>p{
    font-family: "Roboto";
    margin:0;
}

@media (max-width: 575.98px) { 

    .description-content, .contact-text{
        font-size: 0.75em;
    }

    .collapse-img + .description-content{
        min-height: calc(10vw + 100px);
    }

    .description-title, .contact-title{
        font-size: 1em;
    }

    .col-header-text{
        font-size: 0.75em;
    }
 }


.disclaimer{
    text-align: center;
    color: #646B76;
    font-size: 16px;
    line-height: 19px;
}


footer{
    background-color: #2D3E4E;
    color: white;
    padding: 22px 0px 22px 0px;
    text-indent: 4.43vw;
    margin-top: 25px;
    font-size: 16px;
}

footer > a{
    color: white;
    text-decoration: none;
}


@media (max-width: 575.98px) { 

    .disclaimer{
        font-size: 0.75em;
        margin: 0;
        padding-left:15px;
        padding-right: 15px;
    }
}


.spinner{
    text-align: center;
    justify-self: center;
    padding: 10px;
}
.spinner>i{
    font-size: 50px;
    color: #e09e50;
}

